2014-11-07  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/vmlisp.lisp: Redirect IO when running programs
	from Closure CL

2014-11-07  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/Makefile.in: Add FORMCAT to CATLIST

2014-11-06  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/plot.spad, src/algebra/plot3d.spad:
	Simplify (works around Closure CL bug)

2014-10-16  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	Misc cleanups
	* Makefile.in, config/var-def.mk, config/setup-dep.mk,
	src/interp/int-top.boot: Minor clenups
	src/scripts/document.in: Remove

2014-10-16  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/exposed.lsp: Expose GnuDraw.

2014-10-16  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/g-boot.boot: Avoid overwriting loop limit
	and increment.

2014-10-15  Ralf Hemmecke  <ralf@hemmecke.org>

	* src/aldor/README, src/doc/htex/ug15.htex: fix location of
	  git mirror of svn repository

2014-10-15  David Cyganski
            Waldek Hebisch  <hebisch@math.uni.wroc.pl>
            Bill Page <bill.page@newsynthesis.org>

	Add gnuDraw
	* src/algebra/gnudraw.spad: New file
	* src/algebra/draw.spad, src/algebra/viewpack.spad,
	src/algebra/view2D.spad, src/algebra/Makefile.in
	src/doc/htex/ug07.htex: Adjust

2014-10-13  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	Eliminate few uses of $Lisp
	* src/algebra/mantepse.spad, src/algebra/naalg.spad,
	src/algebra/outform.spad, src/algebra/naalgc.spad,
	src/algebra/generic.spad: Eliminate STRINGIMAGE$Lisp
	src/algebra/aggcat2.spad: Elimnate wrong NIL$Lisp

2014-10-09  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/intalg.spad: Fix a thinko

2014-10-06  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/special2.spad: Add DFSFUN2

2014-10-06  Kurt Pagani <nilqed@gmail.com>

	* src/algebra/derham.spad: Fix signature of 'degree'

2014-10-01  Bill Page <bill.page@newsynthesis.org>,

	Texmacs interface encodes scheme Cork symbols as unicode characters