@@ -106,6 +106,7 @@ File(S : SetCategory) : FileCategory(FileName, S) with
             fstream := defstream(fname, mode)
             [fname, fstream, mode]
         reopen!(f, mode) ==
+            if f.fileIOmode = "output" then flush(f)
             fname := f.fileName
             f.fileState := defstream(fname, mode)
             f.fileIOmode := mode
