@@ -1,3 +1,10 @@
+2014-11-08  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
+	* src/algebra/files.spad, src/interp/nlib.lisp,
+	src/interp/daase.lisp, src/interp/macros.lisp,
+	src/interp/ht-util.boot, src/interp/server.boot:
+	Avoid FINISH-OUTPUT
+
 2014-11-07  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
 	* src/interp/vmlisp.lisp: Redirect IO when running programs
